@@ -42,6 +42,8 @@ jsoup changelog
 
   * Bugfix [Fuzz]: Speed improvement when the stack was thousands of items deep, and non-matching close tags sent.
     <https://github.com/jhy/jsoup/issues/1596>
+  
+  * Improvement: Add ability to set custom HostnameVerifier to verify hostname during handshake
 
 *** Release 1.14.1 [2021-Jul-10]
   * Change: updated the minimum supported Java version from Java 7 to Java 8.
